--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,9 @@
         "iostream": "cpp",
         "vector": "cpp",
         "string": "cpp",
-        "xstring": "cpp"
+        "xstring": "cpp",
+        "xutility": "cpp",
+        "algorithm": "cpp",
+        "initializer_list": "cpp"
     }
 }
